# eurorace

./: pyproject.toml
backend/: .gitignore  API_DOCUMENTATION.md  Dockerfile  Dockerfile.test  README.md  docker-compose.yaml  init-postgis.sql  manage.py  pyproject.toml  refresh-collation.sh  run_tests.bat  run_tests.sh
backend/eurorace/: admin.py  apps.py  asgi.py  consumers.py  models.py  routing.py  serializers.py  settings.py  task_models.py  tests.py  urls.py  views.py  websocket_utils.py  wsgi.py
backend/eurorace/migrations/: 0001_initial.py  0002_alter_locationreport_timestamp.py
frontend/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
frontend/src/assets/styles/: colors.css  registration.css
frontend/src/lib/: Leaflet.svelte  Marker.svelte
frontend/src/routes/: +page.svelte  index.svelte  login.svelte
frontend/src/routes/Map/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
